--- a/log.html
+++ b/log.html
@@ -1806,25 +1806,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16815],[],[[4,0,0,[],[1,2811,13995],[[0,5,6,0,7,8,0,9,[1,2812,5898],[[2814,2,10],[5014,2,11],[5019,2,12],[5020,2,13]]],[0,14,6,0,15,16,0,17,[1,8711,534],[]],[0,14,6,0,15,18,0,17,[1,9247,312],[]],[0,19,6,0,20,21,0,22,[1,9560,226],[]],[0,19,6,0,20,23,0,22,[1,9789,3745],[]],[0,24,6,0,25,26,0,9,[1,13546,2352],[]],[0,27,6,0,28,29,0,30,[1,15900,520],[]],[0,19,6,0,20,31,0,22,[1,16429,374],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29909],[],[[4,0,0,[],[1,2422,27484],[[0,5,6,0,7,8,0,9,[1,2423,4369],[[2426,2,10],[4453,2,11],[4458,2,12],[4460,2,13]]],[0,14,15,0,16,17,18,0,[1,6794,1],[[6795,2,19]]],[0,20,6,0,21,22,0,23,[1,6796,818],[]],[0,20,6,0,21,24,0,23,[1,7615,265],[]],[0,25,6,0,26,27,0,28,[1,7881,207],[]],[0,25,6,0,26,29,0,28,[1,8090,3365],[]],[0,30,6,0,31,32,0,9,[1,11461,1578],[]],[0,33,6,0,34,35,0,36,[1,13040,246],[]],[0,25,6,0,26,37,0,28,[1,13289,256],[]],[0,20,6,0,21,38,0,23,[1,13547,2799],[]],[0,20,6,0,21,39,0,23,[1,16347,1510],[]],[0,40,6,0,41,42,0,43,[1,17859,943],[]],[0,20,6,0,21,44,0,23,[1,18805,1211],[]],[0,25,6,0,26,45,0,28,[1,20017,157],[]],[0,30,6,0,31,46,0,9,[1,20175,3933],[]],[0,47,6,0,48,49,0,50,[1,24109,699],[]],[0,40,6,0,41,51,0,43,[1,24809,327],[]],[0,25,6,0,26,45,0,28,[1,25137,242],[]],[0,25,6,0,26,52,0,28,[1,25380,255],[]],[0,25,6,0,26,53,0,28,[1,25636,588],[]],[0,30,6,0,31,54,0,9,[1,26225,3680],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*HorizonGav","*c:\\Users\\INFI-2\\Desktop\\Project-Infi\\Test-project\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance\\HorizonGav.robot","eNrFzkEOgjAQRuGrGPb0T1gSZKOATYxhIQcYmyFWoUOmhURPb4yHcPu+zatod1ce99noJy4BHEoMkTXCXlqbFzhyfCZZ0Ks82KXchtHjyjHly6/gvDoy7Rpc8hJo+pppisYMFj1p8m6dPCs6mmfulTd5UXCMk6h/S+hoMyo3SVn994UKVH8A1yZgvA==","*Test de Connexion à la Page","*Open Browser","*QWeb","*<p>Open new browser to given url.\x3c/p>","*<a href=\"https://luca-dev2.spvie.com/auth/sign-in\">https://luca-dev2.spvie.com/auth/sign-in\x3c/a>, chrome","*Browser, Interaction","*\nQWeb version number: 3.0.0","*Browser: chrome","*Browser version: 119.0.6045.200","*Chromedriver version: 119.0.6045.105 (38c72552c5e15ba9b3117c0967a0fd105072d7c6-refs/branch-heads/6045@{#1103})","*Type Text","*<p>Type given text to a text field.\x3c/p>","*Email, demo-sogeti@spvie.com","*Input, Interaction","*Mot de passe, czUG6R3yuWLwLwQq","*Click Text","*<p>Click text on web page.\x3c/p>","*Connexion","*Interaction, Text","*Tarificateur","*Scroll","*<p>Scrolls the page/element to given direction.\x3c/p>","*Gamme Prévoyance","*Verify Text","*<p>Verify page contains given text.\x3c/p>","*HORIZON GAV","*Text, Verification","*Faire un devis, 9"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Procedure-HorizonGav","*c:\\Users\\INFI-2\\Desktop\\Project-Infi\\Test-project\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance\\Procedure-HorizonGav.robot","eNrNjkEKwjAQAL8ivScLPZbai7Y1INKDfcAatxhNs2WTFPT1UvyE1xkYpsbdQ2jaF5PzVAHAoYIxkkQwl86oEo4UX4kXGISfZJMyYXJwpZjU8iNwzhZ1l4NNjgP6zem2bPVoYEBJzmbvSKDHeaZBaOU3Bktb0NI9C6kTi/tw6HHVwjdORfNHMzVg8wXhrGho","*Test de Connexion à la Page","*Open Browser","*QWeb","*<p>Open new browser to given url.\x3c/p>","*<a href=\"https://luca-dev2.spvie.com/auth/sign-in\">https://luca-dev2.spvie.com/auth/sign-in\x3c/a>, chrome","*Browser, Interaction","*\nQWeb version number: 3.0.0","*Browser: chrome","*Browser version: 119.0.6045.200","*Chromedriver version: 119.0.6045.105 (38c72552c5e15ba9b3117c0967a0fd105072d7c6-refs/branch-heads/6045@{#1103})","*Set Variable","*BuiltIn","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*css:.input-range","*${range_locator}","*${range_locator} = css:.input-range","*Type Text","*<p>Type given text to a text field.\x3c/p>","*Email, demo-sogeti@spvie.com","*Input, Interaction","*Mot de passe, czUG6R3yuWLwLwQq","*Click Text","*<p>Click text on web page.\x3c/p>","*Connexion","*Interaction, Text","*Tarificateur","*Scroll","*<p>Scrolls the page/element to given direction.\x3c/p>","*Gamme Prévoyance","*Verify Text","*<p>Verify page contains given text.\x3c/p>","*HORIZON GAV","*Text, Verification","*Faire un devis, 9","*Date de naissance de l'assuré, ${customerBirthday}","*Date de naissance du conjoint, ${spouseBirthday}","*Click Element","*<p>Click element specified by xpath.\x3c/p>","*xpath=//button[@class='ng-star-inserted']","*Interaction","*Revenu mensuel brut :, 250","*Valider","*Garanties &amp; Cotisations","*Click Item","*<p>Click item (usually icon or picture) on webpage.\x3c/p>","*devoir de conseil","*Interaction, Item","*xpath=//div/div[1]/div/ng-component/div/form/section[2]/div[2]/div[2]/overlay-devoir-conseil/p-dialog[2]/div/div/div[3]/div/input","*Seul","*Ajouter","*Adhérent / Premier assuré"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"HorizonGav","name":"HorizonGav","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"Procedure-HorizonGav","name":"Procedure-HorizonGav","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1701778224549;
+window.output["baseMillis"] = 1701799606031;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16862;
+window.output["generated"] = 30024;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
