--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16815],[],[[4,0,0,[],[1,2811,13995],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29909],[],[[4,0,0,[],[1,2422,27484],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*HorizonGav","*c:\\Users\\INFI-2\\Desktop\\Project-Infi\\Test-project\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance\\HorizonGav.robot","eNrFzkEOgjAQRuGrGPb0T1gSZKOATYxhIQcYmyFWoUOmhURPb4yHcPu+zatod1ce99noJy4BHEoMkTXCXlqbFzhyfCZZ0Ks82KXchtHjyjHly6/gvDoy7Rpc8hJo+pppisYMFj1p8m6dPCs6mmfulTd5UXCMk6h/S+hoMyo3SVn994UKVH8A1yZgvA==","*Test de Connexion à la Page"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Procedure-HorizonGav","*c:\\Users\\INFI-2\\Desktop\\Project-Infi\\Test-project\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance\\Procedure-HorizonGav.robot","eNrNjkEKwjAQAL8ivScLPZbai7Y1INKDfcAatxhNs2WTFPT1UvyE1xkYpsbdQ2jaF5PzVAHAoYIxkkQwl86oEo4UX4kXGISfZJMyYXJwpZjU8iNwzhZ1l4NNjgP6zem2bPVoYEBJzmbvSKDHeaZBaOU3Bktb0NI9C6kTi/tw6HHVwjdORfNHMzVg8wXhrGho","*Test de Connexion à la Page"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"HorizonGav","name":"HorizonGav","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"Procedure-HorizonGav","name":"Procedure-HorizonGav","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1701778224549;
+window.output["baseMillis"] = 1701799606031;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16862;
+window.output["generated"] = 30024;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
